meego-keyboard (0.5.8~1) unstable; urgency=low

  * [UNRELEASED]

 -- huaming wang <huaming.wang@noknokia.comm>  Fri, 22 Oct 2010 10:19:03 +0300

meego-keyboard (0.5.7-1) unstable; urgency=low

  * Fixes: NB#198448 - Sym + char works only for Eng language
  * Fixes: NB#197620 - With the text selected from the HKB,invoking VKB is making the text to disappear.

 -- huaming wang <huaming.wang@nokia.com>  Fri, 22 Oct 2010 10:15:49 +0300

meego-keyboard (0.5.6-1) unstable; urgency=low

  * Toolbar is single line
  * Copy/paste button is on the left side of toolbar
  * Toolbar is rectangular
  * Custom toolbar buttons aligned in the center

 -- huaming wang <huaming.wang@nokia.com>  Tue, 19 Oct 2010 13:36:17 +0300

meego-keyboard (0.5.5-1) unstable; urgency=low

  * New: KeyButtonArea detects long key press
  * Changes: Removed function row leftovers from symbol view
  * Fixes: compilation error in unit tests

 -- huaming wang <huaming.wang@nokia.com>  Fri, 15 Oct 2010 10:55:28 +0300

meego-keyboard (0.5.4-1) unstable; urgency=low

  * Adapted to im framework enum namespace changes
  * Implemented: SWP#TINME-1120 - KeyButtonAreaStyle
  * Implemented: SWP#TINME-1041

 -- huaming wang <huaming.wang@nokia.com>  Thu, 14 Oct 2010 12:47:33 +0300

meego-keyboard (0.5.3-1) unstable; urgency=low

  * Fixes: NB#194475 - fixed by commit "visibility of symbol view depends on visualization priority"
  * Fixes: Turkish language code is "tr", not "tk".
  * Fixes: NB#188659 - Pressing Ctrl+A removes the text in a scenario
  * Fixes: NB#185965 - Autorepeat of arrow keys shows Highlighted text if Autocaps text is present
  * Fixes: hwkb: shift+character must not unlatch shift
  * Fixes: hwkb character loop DTD
  * Fixes: hwkb: invalid key insertion on release after reset()
  * Implemented: initial dead key support for hardware keyboard

 -- huaming wang <huaming.wang@nokia.com>  Tue, 12 Oct 2010 12:55:11 +0300

meego-keyboard (0.5.2-1) unstable; urgency=low
