@@ -18,12 +18,14 @@
 
 #include "keyevent.h"
 
-KeyEvent::KeyEvent(const QString &text, QKeyEvent::Type type, Qt::Key qtKey, SpecialKey specialKey, Qt::KeyboardModifiers modifiers)
+KeyEvent::KeyEvent(const QString &text, QKeyEvent::Type type, Qt::Key qtKey, SpecialKey specialKey,
+                   Qt::KeyboardModifiers modifiers, const QPoint &point)
     : m_type(type),
       m_qtKey(qtKey),
       m_specialKey(specialKey),
       m_text(text),
-      m_modifiers(modifiers)
+      m_modifiers(modifiers),
+      m_pos(point)
 {
 }
 
@@ -32,7 +34,8 @@ KeyEvent::KeyEvent(const KeyEvent &other, QKeyEvent::Type type)
       m_qtKey(other.m_qtKey),
       m_specialKey(other.m_specialKey),
       m_text(other.m_text),
-      m_modifiers(other.m_modifiers)
+      m_modifiers(other.m_modifiers),
+      m_pos(other.m_pos)
 {
 }
 
@@ -73,4 +76,14 @@ bool KeyEvent::operator==(const KeyEvent &other) const
            && (m_modifiers == other.m_modifiers)
            && (m_type == other.m_type)
            && (m_text == other.m_text);
+}
+
+void KeyEvent::setPos(const QPoint &point)
+{
+    m_pos = point;
+}
+
+QPoint KeyEvent::pos() const
+{
+    return m_pos;
 }
